[gd_scene load_steps=6 format=3 uid="uid://jv83g6xhty13"]

[ext_resource type="Texture2D" uid="uid://dobrnu646puq5" path="res://assets/sprites/Gold Coin/01.png" id="1_fs6yy"]
[ext_resource type="Script" uid="uid://cgqs4wyxuos45" path="res://scripts/shop_ui.gd" id="1_oixfk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oixfk"]
bg_color = Color(0.168627, 0.121569, 0.0823529, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.831373, 0.647059, 0.454902, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_18xnp"]
bg_color = Color(1, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_crtus"]
bg_color = Color(0.545098, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ShopUI" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_oixfk")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.705882)

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -178.0
offset_right = 358.0
offset_bottom = 171.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_oixfk")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Header" type="HBoxContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.956863, 0.894118, 0.756863, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 32
text = "BOUTIQUE"
horizontal_alignment = 1

[node name="CoinsContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Header"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="CoinIcon" type="TextureRect" parent="Panel/VBoxContainer/Header/CoinsContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("1_fs6yy")
expand_mode = 3
stretch_mode = 5

[node name="CoinsLabel" type="Label" parent="Panel/VBoxContainer/Header/CoinsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 24
text = "0"
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer/Header"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_18xnp")
theme_override_styles/normal = SubResource("StyleBoxFlat_crtus")
text = "X"

[node name="TabContainer" type="TabContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="ATTACKS" type="Control" parent="Panel/VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer/TabContainer/ATTACKS"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="Panel/VBoxContainer/TabContainer/ATTACKS/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="HEALTH" type="Control" parent="Panel/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer/TabContainer/HEALTH"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="Panel/VBoxContainer/TabContainer/HEALTH/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="CAPACITY" type="Control" parent="Panel/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer/TabContainer/CAPACITY"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="Panel/VBoxContainer/TabContainer/CAPACITY/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2
